--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -6,15 +5,33 @@
     /* outline: red solid 1px; */
 }
 
-#loginForm {
-    width: 300px;
+body {
+    background: #a5b1f5;
+    font-family: 'Segoe UI', Arial, sans-serif;
+    color: #222;
+    margin: 0;
+}
+
+#registerForm {
+    width: 380px;
+    margin: 100px auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 24px 0 rgba(0, 0, 0, 0.08);
     padding: 30px;
-    margin: 100 auto;
     display: flex;
     flex-direction: column;
     gap: 10px;
     align-items: center;
-    background-color: lightskyblue;
+    border-radius: 10px;
+    background: #fff;
+}
+
+h1 {
+    text-align: center;
+    font-weight: 600;
+    font-size: 2.2em;
+    color: #4559c9;
+    margin-bottom: 30px;
 }
 
 .hidden {
@@ -29,9 +46,19 @@
     text-align: center;
 }
 
+label {
+    font-size: 1em;
+    font-weight: 500;
+    color: #4559c9;
+    margin-bottom: 6px;
+}
+
 .inputContainer input {
+    border-radius: 10px;
+    background-color: white;
     padding: 5px;
 }
+
 .password-wrapper {
     position: relative;
     display: flex;
@@ -43,14 +70,43 @@
 }
 
 .eye-icon {
-    position:absolute;
+    position: absolute;
     max-width: 15px;
     cursor: pointer;
     right: 10px;
 }
 
+small {
+    color: #ff4a3c;
+    font-size: 0.9em;
+}
+
 #submitButton {
-    padding: 5px;
+    background: #4559c9;
+    color: #fff;
+    font-weight: 600;
     border: none;
     border-radius: 5px;
+    padding: 13px 0;
+    width: 100%;
+    font-size: 1em;
+    margin-top: 12px;
+    cursor: pointer;
+    transition: background 0.2s, opacity 0.2s;
+}
+
+#submitButton.notAvailable,
+#submitButton:disabled {
+    background: #b7c0e7;
+    cursor: not-allowed;
+    opacity: 0.68;
+}
+
+a {
+    display: block;
+    text-align: center;
+    margin-top: 15px;
+    color: #5777e7;
+    text-decoration: none;
+    font-size: 0.97em;
 }
