--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ small {
     font-size: 0.9em;
 }
 
-#submitButton {
+button {
     background: #4559c9;
     color: #fff;
     font-weight: 600;
@@ -95,8 +95,7 @@ small {
     transition: background 0.2s, opacity 0.2s;
 }
 
-#submitButton.notAvailable,
-#submitButton:disabled {
+#submitButton.notAvailable {
     background: #b7c0e7;
     cursor: not-allowed;
     opacity: 0.68;
