--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     margin: 0;
 }
 
-.form {
+.scene {
     width: 380px;
     margin: 100px auto;
     border-radius: 10px;
@@ -95,7 +95,7 @@ button {
     transition: background 0.2s, opacity 0.2s;
 }
 
-#submitButton.notAvailable {
+.notAvailable {
     background: #b7c0e7;
     cursor: not-allowed;
     opacity: 0.68;
