--- a/css/style.css
+++ b/css/style.css
@@ -109,3 +109,36 @@ a {
     text-decoration: none;
     font-size: 0.97em;
 }
+
+footer {
+        width: 100%;
+        background: #f9f9f9; /* Fondo claro */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 15px 0;
+        box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
+        position: fixed;
+    }
+
+    #bannerCookies {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
+
+    #bannerCookies p {
+        margin: 0;
+        font-size: 14px;
+        text-align: center;
+    }
+
+    #allowCookies {
+        width: 50%;
+        border: none;
+        padding: 8px 16px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
