--- a/css/style.css
+++ b/css/style.css
@@ -111,34 +111,34 @@ a {
 }
 
 footer {
-        width: 100%;
-        background: #f9f9f9; /* Fondo claro */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 15px 0;
-        box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
-        position: fixed;
-    }
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+}
 
-    #bannerCookies {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-    }
+#bannerCookies {
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    text-align: center;
+}
 
-    #bannerCookies p {
-        margin: 0;
-        font-size: 14px;
-        text-align: center;
-    }
+#bannerCookies p {
+    margin: 0;
+    font-size: 14px;
+    text-align: center;
+}
 
-    #allowCookies {
-        width: 50%;
-        border: none;
-        padding: 8px 16px;
-        border-radius: 5px;
-        cursor: pointer;
-    }
+#allowCookies {
+    width: 10%;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 5px;
+    cursor: pointer;
+}
